<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <TextView
        android:id="@+id/title_tv"
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:background="@color/dialog_colorPrimary"
        android:text="@string/dialog_title"
        android:textColor="@color/dialog_colorTitleText"
        android:textSize="20sp"
        android:gravity="center_vertical|left"
        android:paddingLeft="10dp"
        android:minWidth="800dp"
        ></TextView>
    <TextView
        android:id="@+id/content_txt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="65dp"
        android:text="@string/dialog_default_content"
        android:gravity="center"
        android:maxLines="4"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        />
    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/dialog_colorDivider"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        ></View>
    <TextView
        android:id="@+id/option_txt_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="50dp"
        android:text="@string/dialog_no_upgrade"
        android:gravity="center"
        android:textColor="@color/dialog_colorOptionText"
        />
    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/dialog_colorDivider"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        ></View>
    <TextView
        android:id="@+id/option_txt_2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="50dp"
        android:text="@string/dialog_later_upgrade"
        android:gravity="center"
        android:textColor="@color/dialog_colorOptionText"
        />
    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/dialog_colorDivider"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        ></View>
    <TextView
        android:id="@+id/option_txt_3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="50dp"
        android:text="@string/dialog_upgrade"
        android:gravity="center"
        android:textColor="@color/dialog_colorOptionText"
        />
</LinearLayout>